2017-07-23  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py(DatasetDeque.move):

	- Make sure to move edges etc. even when reading fails.

2017-07-22  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	(Dataset._ensure_large_enough) (Dataset._add_pseudo_fields)
	(Dataset._read_ndarray):

	- Don't convert regular ndarrays into masked arrays

	(DatasetDeque.move):
	
	- Base new edges on self.edges as well as self.data["time"], otherwise
	we may be consistently off forever if we start off with partly
	unreadable data

	* typhon/datasets/tovs.py (HIRS.as_xarray_dataset):

	- Don't assume masked arrays

	* typhon/physics/units/em.py(estimate_band_coefficients):

	- Make sure regular expression can handle scientific notation

2017-07-21  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py:

	- Added class for minor frame flags

	* typhon/datasets/dataset.py:

	(Dataset.read_period):

	- Fix bug on formatting InvalidDataError
	
	(MultiFileDataset.find_granules):

	- Actually check that matched regular expression fields correspond to
	what was provided.  This is relevant if different versions may be
	stored in the same directory.

	(DatasetDeque):

	- Update various methods, can now provide arguments that will be
	passed on to read_period.

	* typhon/datasets/tovs.py(HIRS.apply_calibcount_filter):

	- Move filtering to external class (in filters.py) that can be passed
	on by composition.  Thanks to John Mrziglod for inspiring this good
	idea, although I'm not ready to move existing inheritance-based stuff
	yet.

	* typhon/physics/units/tools.py(UnitsAwareDataArray):

	- Added .mean() method

	* typhon/utils/__init__.py, typhon/utils/metaclass.py:

	- Added reference to notice of permission for MIT in SO post

2017-07-17  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/common.py (supcolorbar):

	Function to add a common colorbar for all subplots in a figure.

	* doc/typhon.plots.rst:
